--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ markdown==3.10
 PyPDF2==3.0.1
 sqlcipher3-wheels==0.5.6
 cryptography==46.0.3
+llama_cpp_python==0.3.16
+huggingface_hub==1.1.7
+psutil==7.0.0
 
