--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,37 @@
-blinker==1.9.0
-click==8.3.0
+# EdgeCase Equalizer - Dependencies
+# Last updated: December 14, 2025
+
+# Web framework
 Flask==3.1.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
 Werkzeug==3.1.3
-reportlab==4.4.5
-markdown==3.10
-PyPDF2==3.0.1
+Jinja2==3.1.6
+click==8.3.0
+blinker==1.9.0
+itsdangerous==2.2.0
+MarkupSafe==3.0.3
+
+# Production WSGI server
+waitress==3.0.2
+
+# Database (SQLCipher encryption)
 sqlcipher3-wheels==0.5.6
+
+# File encryption
 cryptography==46.0.3
+
+# PDF generation
+reportlab==4.4.5
+PyPDF2==3.0.1
+
+# Markdown export
+Markdown==3.10
+
+# AI integration (optional - for AI Scribe feature)
 llama_cpp_python==0.3.16
 huggingface_hub==1.1.7
-psutil==7.0.0
 
+# System monitoring
+psutil==7.1.3
+
+# Testing
+pytest==9.0.1
