Security hardening: per-install salt, persistent SECRET_KEY, PRAGMA password escaping, validators
- encryption.py: Generate unique per-install salt stored in data/.salt
- app.py: Persist SECRET_KEY to data/.secret_key (survives restarts)
- database.py: Escape single quotes in PRAGMA key to prevent breakage
- validators.py: Add input validation functions for data quality
- backup.py: Include .salt and .secret_key in backup files
- .gitignore: Exclude security files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ attachments/
 backups/
 assets/
 
+# Security files (per-installation, never commit)
+.salt
+.secret_key
+
 # AI models (large files)
 models/
 *.gguf
