--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "sqlcipher3-wheels>=0.5.0",
     "cryptography>=46.0.0",
     "reportlab>=4.4.0",
-    "PyPDF2>=3.0.0",
+    "pypdf>=5.0.0",
     "Markdown>=3.10",
     "psutil>=7.0.0",
 ]
