--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 llama_cpp_python==0.3.16
+markdown==3.10
 MarkupSafe==3.0.3
 numpy==2.4.0
 packaging==25.0
