--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.3.1
 cryptography==46.0.3
 diskcache==5.6.3
 Flask==3.1.2
+huggingface_hub
 iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
