--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Pygments==2.19.2
 pypdf==6.5.0
 pytest==9.0.2
 reportlab==4.4.7
+requests
 sqlcipher3==0.5.4
 typing_extensions==4.15.0
 Werkzeug==3.1.4
